--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="styles/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 	<link href="styles/engine.css" rel="stylesheet">
+	<link href="styles/ui.css" rel="stylesheet">
   </head>
   <title>Langenium Test Page</title>
   <body>
@@ -43,6 +44,7 @@
 			</div>
 		  </div>
 	  </div>
+
 	  <div class="boxes right">
 		  <div id="diagnostics" class="box collapsible">
 			<h2>Diagnostics</h2>
@@ -51,46 +53,48 @@
 
 		  </div>
 		  <div id="selected" class="box">
-			<h2>Currently selected</h2>
+			<h2>Current position</h2>
 			<div id="selectedItem"></div>
 		  </div>
 		  <div id="players" class="box collapsible">
 			<h2>Players online</h2>
 			<ul id="playerList"></ul>
 		  </div>
+		  <div id="bots" class="box collapsible">
+			<h2>Enemies detected (0)</h2>
+			<ul id="botList"></ul>
+		  </div>
 	  </div>
+	  <div id="controls">
+			
+			<div id="dashboard">
+
+				<div id="heading">
+				</div>
+				<div id="speed"></div>
+				<div id="altitude"></div>
+			</div>
+			<div id="targets">
+			<ul></ul>
+			</div>
+		</div>
 	  <div id="container"></div>
   </body>
   <script src="libs/jquery.min.js"></script>
+  <script src="libs/jQueryRotateCompressed.2.2.js"></script>
   <script src="libs/jquery-ui-1.9.2.custom.min.js"></script>
   <script src="libs/socket.io.min.js"></script>
   <script src="libs/three.min.js"></script>
   <script src="libs/tween.min.js"></script>
-
-	<script src="libs/BleachBypassShader.js"></script>
-	<script src="libs/BlendShader.js"></script>
-	<script src="libs/ConvolutionShader.js"></script>
-	<script src="libs/CopyShader.js"></script>
-	<script src="libs/FXAAShader.js"></script>
-	<script src="libs/HorizontalTiltShiftShader.js"></script>
-	<script src="libs/VerticalTiltShiftShader.js"></script>
-	<script src="libs/TriangleBlurShader.js"></script>
-	<script src="libs/VignetteShader.js"></script>
-
-	<script src="libs/EffectComposer.js"></script>
-	<script src="libs/RenderPass.js"></script>
-	<script src="libs/BloomPass.js"></script>
-	<script src="libs/ShaderPass.js"></script>
-	<script src="libs/MaskPass.js"></script>
-	<script src="libs/SavePass.js"></script>
-
-  
   <script src="libs/TrackballControls.js"></script>
   <script src="libs/THREEx.KeyboardState.js"></script>
   <script src="libs/Stats.js"></script> 
   <script src="libs/smoothie.js"></script> 
   <script src="scripts/engine_core.js"></script>
+  <script src="scripts/engine_bullets.js"></script>
   <script src="scripts/engine_events.js"></script>
+  <script src="scripts/engine_utility.js"></script>
+  <script src="scripts/engine_player.js"></script>
   <script src="scripts/engine_instructions.js"></script>
   <script>
 	function getParameter(name)
