--- a/client/index.html
+++ b/client/index.html
@@ -90,12 +90,7 @@
   <script src="libs/THREEx.KeyboardState.js"></script>
   <script src="libs/Stats.js"></script> 
   <script src="libs/smoothie.js"></script> 
-  <script src="scripts/engine_core.js"></script>
-  <script src="scripts/engine_bullets.js"></script>
-  <script src="scripts/engine_events.js"></script>
-  <script src="scripts/engine_utility.js"></script>
-  <script src="scripts/engine_player.js"></script>
-  <script src="scripts/engine_instructions.js"></script>
+  <script src="scripts/client.js"></script>
   <script>
 	function getParameter(name)
 	{
