--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Langenium Test Page</title>
 		<link href="styles/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+		<link href="styles/game.css" rel="stylesheet">
 	</head>
 	<body>
 		<div id="game">
@@ -19,8 +20,15 @@
 	<script src="libs/Stats.js"></script> 
 	<script src="libs/smoothie.js"></script> 
 	<script src="scripts/client.js"></script>  
+	<script src="scripts/effects/bullets.js"></script>  
+	<script src="scripts/effects/particles.js"></script>  
 	<script src="scripts/events.js"></script>  
 	<script src="scripts/objects.js"></script>  
+	<script src="scripts/objects/bots.js"></script>  
+	<script src="scripts/objects/environment.js"></script>  
+	<script src="scripts/objects/players.js"></script>  
+	<script src="scripts/objects/projectiles.js"></script>  
+	
 	<script>
 
 		/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
@@ -29,7 +37,8 @@
 		
 		// Global variables for the THREE JS client
 		var scene;
-		
+		var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
+		var player, ships = [], bots = [], bullets = [], particle_systems = [];
 		
 		//	Setup the global socket variable
 		var socket = setEventHandlers();
