Water effects and extra changes

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
 	<script src="libs/THREEx.KeyboardState.js"></script>
 	<script src="libs/Stats.js"></script> 
 	<script src="libs/smoothie.js"></script> 
+	<script src="libs/SimplexNoise.js"></script> 
 	<script src="scripts/client.js"></script>  
 	<script src="scripts/effects/bullets.js"></script>  
 	<script src="scripts/effects/particles.js"></script>  
