--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
 		var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
 		
 		//	Setup the global socket variable
-		var socket = setEventHandlers();
+		var socket = events.setEventHandlers();
 
 	</script>
 </html>
