Reverting for now

--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,8 @@
 		
 		//	Setup the global socket variable
 		var socket = new events();
-
+        
+        var d = dialogs();
+        d.makeDialog("playerPosition", d.playerPosition);
 	</script>
 </html>
