--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 	<script src="libs/jQueryRotateCompressed.2.2.js"></script>
 	<script src="libs/jquery-ui-1.9.2.custom.min.js"></script>
 	<script src="libs/socket.io.min.js"></script>
-	<script src="libs/three.min.js"></script>
+	<script src="libs/three.js"></script>
 	<script src="libs/tween.min.js"></script>
 	<script src="libs/TrackballControls.js"></script>
 	<script src="libs/THREEx.KeyboardState.js"></script>
