Got full movement bubble working

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,6 @@
 	<script src="scripts/objects/players.js"></script>  
 	<script src="scripts/objects/projectiles.js"></script>  
 	<script src="scripts/ui.js"></script>  
-	
 	<script>
 
 		/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
@@ -42,7 +41,7 @@
 		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 		
 		// Global variables for the THREE JS client
-		var scene, ocean, sky;
+		var scene, water, sky;
 		var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
 		var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
 		
