First tile of water!

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 	<script src="libs/jQueryRotateCompressed.2.2.js"></script>
 	<script src="libs/jquery-ui-1.9.2.custom.min.js"></script>
 	<script src="libs/socket.io.min.js"></script>
-	<script src="libs/three.js"></script>
+	<script src="libs/three.min.js"></script>
 	<script src="libs/tween.min.js"></script>
 	<script src="libs/TrackballControls.js"></script>
 	<script src="libs/THREEx.KeyboardState.js"></script>
@@ -41,7 +41,7 @@
 		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 		
 		// Global variables for the THREE JS client
-		var scene, water, sky;
+		var scene, water, sky, M = 1000000;
 		var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
 		var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
 		
