--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,9 @@
         var ui = new user_interface();
         ui.makeDialog("playerPosition", ui.playerPosition);
 		
+		var voda = { width: 250, alignX: "left", alignY: "top", data: "" };
+		ui.makeDialog("voda",voda);
+		
 		var ed = new editor();
 		
 		
