--- a/client/index.html
+++ b/client/index.html
@@ -58,8 +58,8 @@
         var ui = new user_interface();
         ui.makeDialog("playerPosition", ui.playerPosition);
 		
-		var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
-		ui.makeDialog("log",log_ui);
+		//var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
+		//ui.makeDialog("log",log_ui);
 		
 		var ed = new editor();
 		
