--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
 	<script src="scripts/client.js"></script>  
 	<script src="scripts/editor.js"></script>  
 	<script src="scripts/editor/properties.js"></script>  
+	<script src="scripts/editor/transform.js"></script>
 	<script src="scripts/effects.js"></script>  
 	<script src="scripts/effects/bullets.js"></script>  
 	<script src="scripts/effects/particles.js"></script>  
@@ -61,7 +62,7 @@
 		
 		ui.editor = new editor();
 		ui.editor.properties = new properties();
-		
+		ui.editor.transform = new transform();
 		//var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
 		//ui.makeDialog("log",log_ui);
 		
