Sliders and textboxes working and scaling nicely

--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
 		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 		
 		// Global variables for the THREE JS client
-		var scene, water, sky, M = 1000000;
+		var scene, water, sky, M = 500000;
 		var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
 		var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
 		
